# TroyBinary

./: CMakeLists.txt  file.hpp  inibin.cpp  inibin.h  main.cpp  ritoanm.hpp  ritomath.hpp  ritonvr.hpp  ritoresource.hpp  ritoskl.hpp  ritoskn.hpp  types.hpp
particle/: complex.cpp  complex.h  fields.cpp  fields.h  ptypes.cpp  ptypes.h  simple.cpp  simple.h  system.cpp  system.h
particle/instance/: complex.cpp  complex.h  field.cpp  field.h  group.cpp  group.h  simple.cpp  simple.h  system.cpp  system.h
